docs: rewrite top-level READMEs + bilingual USER_GUIDE for the web stack
The original READMEs and the legacy KO USER_GUIDE described an Electron
desktop app with ECharts-only charts. Phases 1..6 turned the project
into a local FastAPI web app with Tailwind v4 + shadcn/ui + D3 +
ECharts, six-runtime thread-dump parsers, multi-dump correlation,
interactive GC timeline, and a Canvas flamegraph. This commit brings
the user-facing docs in line with the actual product.

- README.md / README.en.md / README.ko.md
  * Quick start now starts from `pip install -e .` + `scripts/serve-web.sh`
    and a browser open at http://127.0.0.1:8765 (no Electron, no
    PyInstaller sidecar).
  * Highlights table covers profiler (collapsed/SVG/HTML/Jennifer +
    Canvas auto-switch), GC (interactive zoom/brush + algorithm tab),
    multi-language thread dumps + multi-dump correlation +
    LATENCY_SECTION_DETECTED, thread→flamegraph conversion, image
    export matrix, theme/locale.
  * ASCII architecture diagram showing browser → FastAPI → in-process
    Python engine.
  * CLI cheatsheet covering all current subcommands.
  * Local-first / privacy paragraph reflecting the new on-disk layout
    (~/.archscope/{uploads,settings.json}).

- docs/en/USER_GUIDE.md (new)
- docs/ko/USER_GUIDE.md (rewritten in place)
  * Install/run, UI tour, page-by-page walkthroughs (Dashboard /
    Access Log / Profiler / GC / Threads / Exception / JFR / Demo /
    Export / Chart Studio / Settings).
  * Image-export matrix (PNG 1x/2x/3x · JPEG 2x · SVG vector) plus the
    'Save all charts' batch flow.
  * Thread→flamegraph conversion section with both CLI and the web
    `type:"thread_dump_to_collapsed"` endpoint.
  * Full CLI reference grouped by domain.
  * Troubleshooting FAQ for the seven most common gotchas (blank PNG,
    UNKNOWN/MIXED thread-dump formats, ECharts theme follow, …).

Architecture / parser / packaging / bridge docs and the doc-index
READMEs are refreshed in the follow-up commit.

Co-Authore